--- a/ReactiveExtensions/tools/src/main/res/layout/fragment_rxbinding.xml
+++ b/ReactiveExtensions/tools/src/main/res/layout/fragment_rxbinding.xml
@@ -20,10 +20,9 @@
             android:id="@+id/rxBindingButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
+            android:onClick="@{viewModel.onClickListener}"
             android:text="@{viewModel.text}"
             tools:text="PRESS ME" />
-        <!--android:onClick="@{viewModel.onClickListener}"-->
 
     </LinearLayout>
 
