--- a/ReactiveExtensions/common/src/main/res/layout/activity_base.xml
+++ b/ReactiveExtensions/common/src/main/res/layout/activity_base.xml
@@ -13,13 +13,7 @@
     tools:context="com.barbasdev.common.base.BaseActivity">
 
     <FrameLayout
-        android:id="@+id/fragmentContainerTop"
-        android:layout_weight="1"
-        android:layout_width="match_parent"
-        android:layout_height="0dp" />
-
-    <FrameLayout
-        android:id="@+id/fragmentContainerBottom"
+        android:id="@+id/fragmentContainer"
         android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="0dp" />
