--- a/ReactiveExtensions/movies/src/main/res/layout/fragment_movies.xml
+++ b/ReactiveExtensions/movies/src/main/res/layout/fragment_movies.xml
@@ -13,15 +13,24 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
+        android:padding="8dp"
         android:orientation="vertical">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="@{viewModel.onClickListener}"
-            android:text="@{viewModel.text}"
-            tools:text="PRESS ME" />
+        <EditText
+            android:id="@+id/searchText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <!--<EditText-->
+            <!--android:id="@+id/searchText2"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content" />-->
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="8dp" />
 
     </LinearLayout>
 
