upgraded to rxbinding2 and cleanup

--- a/ReactiveExtensions/tools/src/main/res/layout/fragment_proof_of_concept.xml
+++ b/ReactiveExtensions/tools/src/main/res/layout/fragment_proof_of_concept.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.barbasdev.tools.rxbinding.RxBindingViewModel" />
+            type="com.barbasdev.tools.rxbinding.ProofOfConceptViewModel" />
 
     </data>
 
