moved base classes to app module for dependency injection purposes (we’ll see if that can be reverted)

--- a/ReactiveExtensions/app/src/main/res/layout/fragment_proof_of_concept.xml
+++ b/ReactiveExtensions/app/src/main/res/layout/fragment_proof_of_concept.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.barbasdev.tools.rxbinding.ProofOfConceptViewModel" />
+            type="com.barbasdev.reactiveextensions.main.proofofconcept.ProofOfConceptViewModel" />
 
     </data>
 
