--- a/ReactiveExtensions/app/src/main/res/layout/fragment_movies.xml
+++ b/ReactiveExtensions/app/src/main/res/layout/fragment_movies.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.barbasdev.movies.MoviesViewModel" />
+            type="com.barbasdev.reactiveextensions.main.movies.MoviesViewModel" />
 
     </data>
 
