--- a/ReactiveExtensions/app/src/main/res/layout/fragment_posts.xml
+++ b/ReactiveExtensions/app/src/main/res/layout/fragment_posts.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.barbasdev.posts.PostsViewModel" />
+            type="com.barbasdev.reactiveextensions.main.posts.PostsViewModel" />
 
     </data>
 
